# YOrch

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  NOTICE  README.md
.github/workflows/: doxygen-pages.yml
benchmarks/: .clang-tidy  CMakeLists.txt  bench_run_plan_optimized.cpp  bench_run_plan_runtime.cpp  run_plan_helpers.hpp
cmake/: YOrchConfig.cmake.in
docs/: Doxyfile.in  design_positioning.md  development.md  execution_model.md  git-branch-commit-guidelines.md  index.md  prev_access_and_fanout_policy.md  project_structure.md
doxygen/: CMakeLists.txt  Doxyfile.in  README.md  index.md
examples/: CMakeLists.txt  example_hello_world.cpp
include/yorch/: assert.hpp  bind.hpp  context.hpp  executor.hpp  plan.hpp  resolve.hpp  result.hpp  schedule.hpp  slots.hpp  specs.hpp  task_adapters.hpp  task_tree.hpp  traits.hpp  yorch.hpp
include/yorch/bind/: adapters.hpp  builders.hpp  tasks.hpp
include/yorch/bind/builders/: core.hpp  diagnostics.hpp
include/yorch/bind/tasks/: detail.hpp  factories.hpp  types.hpp
include/yorch/detail/: maybe_storage.hpp  slot_policy.hpp
include/yorch/executor/: concepts.hpp  plan.hpp  policies.hpp  task.hpp
include/yorch/plan/: compiled_plan.hpp  layout.hpp  traits.hpp
include/yorch/slots/: direct_out.hpp  plan_exec_slots.hpp  policies.hpp  result_out.hpp
include/yorch/task_adapters/: catch_as_failure.hpp  concepts.hpp  retry.hpp
include/yorch/task_tree/: builder.hpp  policies.hpp
src/: yorch.cpp
tests/: CMakeLists.txt  test_bind.cpp  test_context.cpp  test_executor.cpp  test_plan.cpp  test_resolve.cpp  test_result.cpp  test_schedule.cpp  test_slots.cpp  test_specs.cpp  test_task_adapters.cpp  test_task_tree.cpp
tests/bind/: support.hpp  test_bind_free.cpp  test_bind_member.cpp  test_task_sugar.cpp  test_traits.cpp
tests/compile_fail/: CMakeLists.txt
tests/compile_fail/bind_arity_mismatch/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_callable_shape_invalid/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_borrow_prev/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_consume_by_value/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_consume_prev/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_copy_prev/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_direct_out_callable/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_borrow_prev/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_callable/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_consume_by_value/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_consume_prev_receiver/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_copy_prev/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_direct_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_missing_receiver/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_not_member/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_payload_mismatch/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_prev_access_count/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_reference_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_member_void_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_prev_access_count/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_reference_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_forward_prev_void_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_arity_mismatch/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_callable_shape_invalid/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_member_arity_mismatch/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_member_callable/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_member_missing_output_parameter/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_member_not_member/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_member_reference_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_member_void_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_member_wrong_output_parameter/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_missing_output_parameter/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_reference_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_void_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_into_wrong_output_parameter/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_member_arity_mismatch/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_member_callable/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_member_direct_output/: CMakeLists.txt  main.cpp
tests/compile_fail/bind_member_not_member/: CMakeLists.txt  main.cpp
tests/compile_fail/compile_plan_fanout_invalid/: CMakeLists.txt  main.cpp
tests/compile_fail/compile_plan_forward_prev_root/: CMakeLists.txt  main.cpp
tests/compile_fail/compile_plan_forward_prev_void_parent/: CMakeLists.txt  main.cpp
tests/compile_fail/compile_plan_retry_consume_prev/: CMakeLists.txt  main.cpp
tests/compile_fail/forward_prev_parent_type_mismatch/: CMakeLists.txt  main.cpp
tests/compile_fail/task_result_void/: CMakeLists.txt  main.cpp
tests/executor/: prev_access_support.hpp  support.hpp  test_run_plan_basic.cpp  test_run_plan_direct_output.cpp  test_run_plan_fanout.cpp  test_run_plan_forward_prev.cpp  test_run_plan_policies.cpp  test_run_plan_prev_access.cpp  test_run_plan_prev_access_runtime.cpp  test_run_plan_prev_access_validation.cpp  test_run_task.cpp
tests/task_tree/: support.hpp  test_builder.cpp  test_callable_sugar.cpp  test_member_sugar.cpp
wiki/cn/: build_tree.md  executor.md  intro_cn.md  register_task.md
wiki/en/: build_tree.md  executor.md  register_task.md
(+43 files in other folders)
